# page-automation

./: .env.example  .gitignore  Documentation.md  LICENSE  README.md  pyproject.toml
.github/workflows/: automater.yml
src/: confession_image_generator.py  gemini_processor.py  google_form_reader.py  insta_poster.py  main.py  model.py  reel_generator.py  utils.py
