[project]
name = "iitkqc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.0",
    "dotenv>=0.9.9",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.56.0",
    "gspread>=6.2.1",
    "pillow>=11.2.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
]
